Updated for Mobile Display

--- a/index.html
+++ b/index.html
@@ -54,20 +54,22 @@
     <main>
       <section class="Home">
         <img id="cover" src="images/BgPic.png" alt="3d Male Character showing search with 3d icons" width="800">
-        <h1><img src="images/logo.png" alt="Bing short Logo" width="50"> Discover Bing</h1>
+        <h1><img id="bLogo" src="images/logo.png" alt="Bing short Logo" width="50"> Discover Bing</h1>
         <p>Universe of Information at Your Fingertips. With Bing, you get more than just search results; you get a comprehensive overview, diverse perspectives, and intuitive features. Bing is a search engine developed by Microsoft, providing a unique search experience with innovative features. Explore the features of Bing and invite others to join the experience.
         </p>
       </section>
+
       <section class="About">
         <div class="img-about">
           <img src="images/charAndScreen.png" alt="3d Female Character" width="500">
         </div>
         <div class="details-about">
-          <h1>Your Comprehensive Search Solution</h1>
+          <h1>Your Inclusive Search Solution</h1>
           <p>Bing is a fast, accurate, and user-friendly search engine that offers diverse content, from web pages to videos. It provides key information through rich snippets and knowledge panels, and unique features like visual search and Bing Rewards. Bing respects your privacy, supports multiple languages, and integrates seamlessly with other Microsoft products. Experience the Bing difference today!</p>
           <button id="abBtn">Read More</button>
         </div>
       </section>
+
       <section class="Reviews">
         <div class="headerReview">
           <h1>User Reviews</h1>
@@ -75,7 +77,7 @@
         </div>
         
         <div class="cards">
-          <div class="card">
+          <div class="card" id="cardone">
             <img src=images/User1.jpg alt="Emma Wills" width="100px" height="100px"></img>
             <div class="cardHeader">
                 <h3>Ally Doe</h3>
@@ -121,7 +123,7 @@
         <img src="images/mLogo.png" alt="Microsoft Logo">
         <form>
             <input type="text" id="email" name="userEmail" placeholder="Enter your email">
-            <button type="submit">Subscribe Now</button>
+            <button type="submit">Subscribe</button>
         </form>
       </div>
 
